[package]
name = "rust1"
version = "0.1.0"
authors = ["devguchi <devguchitaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.1"
textplots = "0.8.0"
proconio = "0.4.3"
text_io = "0.1.9"
whiteread = "0.5.0"
