[package]
name = "rust1"
version = "0.1.0"
authors = ["devguchi <devguchitaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.3", feature = ["derive"] }
whiteread = "0.5.0"
itertools = "0.10.1"