[package]
name = "abc232"
version = "0.1.0"
authors = ["web3ten0 <web3ten0@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
petgraph = "=0.5.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"

[profile.release]
lto = true
panic = 'abort'
